--- a/nvim/todo.txt
+++ b/nvim/todo.txt
@@ -6,3 +6,6 @@ Pain Points
 - [x] Setup of QSAV env -> Alias
 - [ ] Copy and Paste to other windows
 - [x] Management of projects -> tmux
+- [ ] Workspace management for nested projects (webservice)
+- [ ] Shortcut for telescope resume
+- [ ] Shortcut for focus undotree => necessary for splits
