Add Python DAP draft

--- a/nvim/todo.txt
+++ b/nvim/todo.txt
@@ -2,7 +2,7 @@
 - [ ] Setup dap
    - [x] Rust
    - [x] Scala
-   - [ ] Python
+   - [ ] Python (Cleanup + Keymaps)
 
 Pain Points
 - [x] Setup of QSAV env -> Alias
